[package]
authors = ['Fragcolor <https://github.com/fragcolor-xyz>']
description = 'Proto-Accounts pallet.'
edition = '2021'
license = 'BUSL-1.1'
name = 'pallet-accounts'
readme = 'README.md'
version = '0.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.sp-core]
default-features = false
git = 'https://github.com/fragcolor-xyz/substrate.git'
tag = 'fragnova-v0.9.29-1'
version = '6.0.0'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/fragcolor-xyz/substrate.git'
tag = 'fragnova-v0.9.29-1'
version = '6.0.0'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/fragcolor-xyz/substrate.git'
tag = 'fragnova-v0.9.29-1'
version = '4.0.0-dev'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/fragcolor-xyz/substrate.git'
tag = 'fragnova-v0.9.29-1'
version = '6.0.0'

[dependencies.sp-keystore]
default-features = false
git = 'https://github.com/fragcolor-xyz/substrate.git'
tag = 'fragnova-v0.9.29-1'
version = '0.12.0'
optional = true

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '3.0.0'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/fragcolor-xyz/substrate.git'
tag = 'fragnova-v0.9.29-1'
version = '4.0.0-dev'
optional = true

[dependencies.frame-support]
default-features = false
git = 'https://github.com/fragcolor-xyz/substrate.git'
tag = 'fragnova-v0.9.29-1'
version = '4.0.0-dev'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/fragcolor-xyz/substrate.git'
tag = 'fragnova-v0.9.29-1'
version = '4.0.0-dev'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '2.0'

[dependencies.pallet-randomness-collective-flip]
default-features = false
git = 'https://github.com/fragcolor-xyz/substrate.git'
tag = 'fragnova-v0.9.29-1'
version = '4.0.0-dev'

[dependencies.pallet-assets]
default-features = false
git = 'https://github.com/fragcolor-xyz/substrate.git'
tag = 'fragnova-v0.9.29-1'
version = '4.0.0-dev'

[dependencies.pallet-balances]
default-features = false
git = 'https://github.com/fragcolor-xyz/substrate.git'
tag = 'fragnova-v0.9.29-1'
version = '4.0.0-dev'

[dependencies.pallet-proxy]
default-features = false
git = 'https://github.com/fragcolor-xyz/substrate.git'
tag = 'fragnova-v0.9.29-1'
version = '4.0.0-dev'

[dependencies.pallet-timestamp]
default-features = false
git = 'https://github.com/fragcolor-xyz/substrate.git'
tag = 'fragnova-v0.9.29-1'
version = '4.0.0-dev'

[dependencies]
log = { version = "0.4.14", default-features = false }
sp-clamor = { version = '0.1.0', path = '../../primitives/clamor', default-features = false }
hex = { version = "0.4.3", default-features = false }
serde = { version = "1.0.136", features = ["derive"], optional = true }
serde_json = { version = '1.0.79', default-features = false, features = ['alloc'] }
ethabi = { version = "17.0.0", default-features = false }
parking_lot = "0.12.1" # copied from https://github.com/JoshOrndorff/recipes/blob/master/pallets/ocw-demo/Cargo.toml#L11
libsecp256k1 = {version = "0.7.0", default-features = false} # https://crates.io/crates/libsecp256k1

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking/runtime-benchmarks']
std = [
	'serde',
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'sp-io/std',
    'sp-std/std',
	'sp-runtime/std',
    'pallet-randomness-collective-flip/std',
    'pallet-balances/std',
    'pallet-assets/std',
    'pallet-proxy/std',
    'pallet-timestamp/std',
    'log/std',
	'sp-keystore',
	'sp-core/std',
]
try-runtime = ['frame-support/try-runtime']
compile-dummy-data=[]
