[package]
authors = ['Fragcolor <https://github.com/fragcolor-xyz>']
description = 'Proto-Accounts pallet.'
edition = '2021'
license = 'BUSL-1.1'
name = 'pallet-accounts'
readme = 'README.md'
version = '0.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
sp-core = { version = '7.0.0', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
sp-io = { version = '7.0.0', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
sp-std = { version = '5.0.0', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
sp-runtime = { version = '7.0.0', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
sp-keystore = { version = '0.13.0', default-features = false, optional = true, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
sp-fragnova = { version = '0.1.0', path = '../../primitives/fragnova', default-features = false }

frame-benchmarking = { version = '4.0.0-dev', default-features = false, optional = true, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
frame-support = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
frame-system = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
pallet-randomness-collective-flip = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
pallet-balances = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
pallet-assets = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
pallet-proxy = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
pallet-timestamp = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
pallet-oracle = { default-features = false, path = '../oracle' }

codec = { package = 'parity-scale-codec', version = '3.0.0', default-features = false, features = ['derive'] }
scale-info = { version = '2.0', default-features = false, features = ['derive'] }

log = { version = "0.4.14", default-features = false }
hex = { version = "0.4.3", default-features = false }
serde = { version = "1.0.136", features = ["derive"], optional = true }
serde_json = { version = '1.0.79', default-features = false, features = ['alloc'] }
ethabi = { version = "18.0.0", default-features = false }
libsecp256k1 = {version = "0.7.0", default-features = false} # https://crates.io/crates/libsecp256k1 (libsecp256k1 is owned by Parity Tech by the way)

[dev-dependencies]
parking_lot = "0.12.1" # copied from https://github.com/JoshOrndorff/recipes/blob/master/pallets/ocw-demo/Cargo.toml#L11

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking/runtime-benchmarks', 'libsecp256k1/static-context', 'libsecp256k1/hmac']
std = [
	'sp-core/std',
	'sp-io/std',
	'sp-std/std',
	'sp-runtime/std',
	'sp-keystore',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'pallet-randomness-collective-flip/std',
    'pallet-balances/std',
    'pallet-assets/std',
    'pallet-proxy/std',
    'pallet-timestamp/std',
	'codec/std',
	"scale-info/std",
	'serde',
    'log/std',
]
try-runtime = ['frame-support/try-runtime']
compile-dummy-data=[]
