[package]
authors = ['Fragcolor <https://github.com/fragcolor-xyz>']
description = 'Detach utility pallet.'
edition = '2021'
license = 'BUSL-1.1'
name = 'pallet-detach'
readme = 'README.md'
version = '0.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
sp-core = { version = '6.0.0', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', tag = 'fragnova-v0.0.6' }
sp-io = { version = '6.0.0', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', tag = 'fragnova-v0.0.6' }
sp-std = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', tag = 'fragnova-v0.0.6' }
sp-runtime = { version = '6.0.0', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', tag = 'fragnova-v0.0.6' }
sp-keystore = { version = '0.12.0', default-features = false, optional = true, git = 'https://github.com/fragcolor-xyz/substrate.git', tag = 'fragnova-v0.0.6' }
sp-fragnova = { version = '0.1.0', path = '../../primitives/fragnova', default-features = false }

frame-benchmarking = { version = '4.0.0-dev', default-features = false, optional = true, git = 'https://github.com/fragcolor-xyz/substrate.git', tag = 'fragnova-v0.0.6' }
frame-support = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', tag = 'fragnova-v0.0.6' }
frame-system = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', tag = 'fragnova-v0.0.6' }
pallet-randomness-collective-flip = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', tag = 'fragnova-v0.0.6' }

codec = { package = 'parity-scale-codec', version = '3.0.0', default-features = false, features = ['derive'] }
scale-info = { version = '2.0', default-features = false, features = ['derive'] }

log = { version = "0.4.14", default-features = false }
hex = { version = "0.4", default-features = false }

#beefy-merkle-tree = { version = '4.0.0-dev', default-features = false, features = ['keccak'], git = 'https://github.com/fragcolor-xyz/substrate.git', tag = 'fragnova-v0.0.6' }

[dev-dependencies]
parking_lot = "0.12.1" # copied from https://github.com/JoshOrndorff/recipes/blob/master/pallets/ocw-demo/Cargo.toml#L11
serde = '1.0.119'

[features]
default = ['std']
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
std = [
	'sp-core/std',
	'sp-io/std',
	'sp-std/std',
	'sp-runtime/std',
	'sp-keystore',
	'frame-benchmarking/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-randomness-collective-flip/std',
	'codec/std',
	"scale-info/std",
	'log/std',
#	'beefy-merkle-tree/std',
]
try-runtime = ['frame-support/try-runtime']
