[package]
authors = ['Fragcolor <https://github.com/fragcolor-xyz>']
description = 'Detach utility pallet.'
edition = '2021'
license = 'BUSL-1.1'
name = 'pallet-detach'
readme = 'README.md'
version = '0.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
sp-core = { version = '7.0.0', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
sp-io = { version = '7.0.0', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
sp-std = { version = '5.0.0', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
sp-runtime = { version = '7.0.0', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
sp-keystore = { version = '0.13.0', default-features = false, optional = true, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
sp-fragnova = { version = '0.1.0', path = '../../primitives/fragnova', default-features = false }

frame-benchmarking = { version = '4.0.0-dev', default-features = false, optional = true, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
frame-support = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
frame-system = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
pallet-randomness-collective-flip = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }

codec = { package = 'parity-scale-codec', version = '3.0.0', default-features = false, features = ['derive'] }
scale-info = { version = '2.0', default-features = false, features = ['derive'] }

log = { version = "0.4.14", default-features = false }
hex = { version = "0.4", default-features = false }

#beefy-merkle-tree = { version = '4.0.0-dev', default-features = false, features = ['keccak'], git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }

[dev-dependencies]
parking_lot = "0.12.1" # copied from https://github.com/JoshOrndorff/recipes/blob/master/pallets/ocw-demo/Cargo.toml#L11
serde = '1.0.119'

[features]
default = ['std']
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
std = [
	'sp-core/std',
	'sp-io/std',
	'sp-std/std',
	'sp-runtime/std',
	'sp-keystore',
	'frame-benchmarking/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-randomness-collective-flip/std',
	'codec/std',
	"scale-info/std",
	'log/std',
#	'beefy-merkle-tree/std',
]
try-runtime = ['frame-support/try-runtime']
