[dev-dependencies.serde]
version = '1.0.119'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-10'
version = '4.0.0-dev'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-10'
version = '4.0.0-dev'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-10'
version = '4.0.0-dev'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-10'
version = '4.0.0-dev'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-10'
version = '4.0.0-dev'
optional = true

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-10'
version = '4.0.0-dev'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-10'
version = '4.0.0-dev'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '1.0'

[dependencies]
log = { version = "0.4.14", default-features = false }
brotli = { version = "3.3.2", default-features = false }
alloc-no-stdlib = "2.0.3"

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'sp-io/std',
    'sp-std/std',
	'sp-runtime/std',
    'log/std',
]
try-runtime = ['frame-support/try-runtime']

[package]
authors = ['Fragcolor <https://github.com/fragcolor-xyz>']
description = 'Fragments Asset Store pallet.'
edition = '2018'
license = 'BUSL-1.1'
name = 'fragments-pallet'
readme = 'README.md'
version = '0.0.1'
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']
