[package]
authors = ['Fragcolor <https://github.com/fragcolor-xyz>']
description = 'Protos Fragment pallet.'
edition = '2021'
license = 'BUSL-1.1'
name = 'pallet-fragments'
readme = 'README.md'
version = '0.0.1'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-core = { version = '7.0.0', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
sp-io = { version = '7.0.0', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
sp-std = { version = '5.0.0', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
sp-runtime = { version = '7.0.0', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
sp-fragnova = { version = '0.1.0', path = '../../primitives/fragnova', default-features = false }
sp-api = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }

frame-benchmarking = { version = '4.0.0-dev', default-features = false, optional = true, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
frame-support = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
frame-system = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
pallet-randomness-collective-flip = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
pallet-balances = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
pallet-assets = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
pallet-proxy = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
pallet-timestamp = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
pallet-contracts = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
pallet-protos = { default-features = false, path = '../protos' }
pallet-accounts = { default-features = false, path = '../accounts' }
pallet-detach = { default-features = false, path = '../detach' }
pallet-oracle = { default-features = false, path = '../oracle' }
pallet-clusters = { default-features = false, path = '../clusters' }

codec = { package = 'parity-scale-codec', version = '3.0.0', default-features = false, features = ['derive'] }
scale-info = { version = '2.0', default-features = false, features = ['derive'] }

hex = { version = "0.4.3", default-features = false }
serde = { version = "1.0.136", default-features = false, features = ["derive"], optional = true }
serde_json = { version = '1.0.79', default-features = false, features = ['alloc'] }
protos = { version = "0.1.25", default-features = false }
log = { version = "0.4.14", default-features = false }
bitflags = "1.3.2"

[dev-dependencies]
itertools = "0.10.3"

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-io/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-randomness-collective-flip/std",
	'pallet-balances/std',
	'pallet-assets/std',
	'pallet-contracts/std',
	"pallet-protos/std",
	"codec/std",
	"scale-info/std",
	'serde',
	'protos/std'
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
